--- a/index.htm
+++ b/index.htm
@@ -10,8 +10,8 @@
 <body>
 <div id="main_frame">
 	<div id="display">
-		<input id="enter"></input>
-		<input id="result" value=0></input>
+		<input id="enter" disabled></input>
+		<input id="result" value=0 disabled></input>
 	</div>
 	<div id="buttons">
 		<div class="row">
