--- a/index.html
+++ b/index.html
@@ -108,10 +108,9 @@
 				<span id="question"></span>
 			</div>
 			<div id="inputs">
-				<span>X1: X2:</span>
 				<br>
-				<input type="number" id=input1><br>
-				<input type="number" id=input2>
+				X1: <input type="number" id=input1><br>
+				X2: <input type="number" id=input2>
 			</div>
 		</div>
 		<div id="controls"><button id="check" onclick=check()>Проверить</button></div>
