--- a/index.html
+++ b/index.html
@@ -60,9 +60,15 @@
 		}
 		input {
 			background: rgba(0, 0, 0, 0.5);
-			outline: none;
+			outline-color: red;
 			font-size: 15pt;
 			color: white;
+		}
+		button {
+			background: rgba(0, 0, 0, 0.5);
+			color: white;
+			outline-color: red;
+			font-size: 15pt;
 		}
 	</style>
 	<script type="text/javascript">
