--- a/index.html
+++ b/index.html
@@ -2,140 +2,7 @@
 <html>
 <head>
 	<title>Теорема Виета</title>
-	<style type="text/css">
-		div {
-			box-sizing: border-box;
-		}
-		#frame {
-			height: 50%;
-			width: 75%;
-			background: white;
-			top: 25%;
-			left: 12.5%;
-			position: fixed;
-			border-bottom: 10px #222 solid;
-			border-right: 10px #333 solid;
-		}
-		body, html {
-			font-family: sans-serif;
-			font-size: 16pt;
-			margin: 0px;
-			height: 100%;
-			width: 100%;
-			background: #444;
-		}
-		#status {
-			height: 15%;
-			width: 100%;
-		}
-		#status > * {
-			position: relative;
-			top: 20%;
-		}
-		#content {
-			height: 60%;
-			width: 100%;
-			border-top: 2px black solid;
-			border-bottom: 2px black solid;
-		}
-		#controls {
-			height: 25%;
-			width: 100%;
-		}
-		div {
-			vertical-align: text-bottom;
-			text-align: center;
-		}
-		#check {
-			position: relative;
-			height: 50%;
-			width: 75%;
-			top: 25%;
-		}
-		#text {
-			height: 50%;
-			position: relative;
-			top: 25%;
-		}
-		input {
-			background: rgba(0, 0, 0, 0.5);
-			outline-color: red;
-			font-size: 15pt;
-			color: white;
-		}
-		button {
-			position: relative;
-			background: rgba(0, 0, 0, 0.5);
-			color: #eee;
-			font-size: 15pt;
-			width: 30%;
-			top: 3%;
-			margin-top: 2px;
-			border: 2px solid #333;
-		}
-		button:hover {
-			color: white;
-			background: rgba(0, 0, 0, 0.8);
-		}
-	</style>
-	<script type="text/javascript">
-		var x1, x2;
-		var offset = 0;
-		var choice;
-		var variants = [[0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0]];
-		function generate() {
-			var buttons = document.getElementsByTagName('button');
-			for (var i=0; i<buttons.length; i++) {
-				x1 = Math.floor(Math.random()*9+1+offset);
-				x2 = Math.floor(Math.random()*9+1+offset);
-				if (Math.random()>0.5) x1=-x1;
-				if (Math.random()>0.5) x2=-x2;
-				if (x1>x2) variants[i] = [x1 , x2];
-				else variants[i] = [x2, x1];
-			}
-			choice = Math.floor(Math.random()*5);
-			x1 = variants[choice][0];
-			x2 = variants[choice][1];
-			sum = x1+x2;
-			mul = x1*x2;
-			var fake = 5-choice;
-			variants[fake][1] = sum-variants[fake][0];
-			for (var i=0; i<buttons.length; i++) {
-				buttons[i].innerHTML = `${variants[i][0]} ${variants[i][1]}`;
-			}
-			question = `x1+x2 = ${sum}<br>x1*x2 = ${mul}`;
-			document.getElementById("question").innerHTML = question;
-		}
-		function check(user_choice) {
-			var state = document.getElementById("state");
-			if (variants[choice]==variants[user_choice]) {
-				state.innerHTML = "Верно!";
-				offset++;
-				generate();
-			} else {
-				state.innerHTML = "Неверно!";
-				if (offset>0) offset--;
-			}
-		}
-	</script>
 </head>
-<body onLoad=generate()>
-	<div id="frame">
-		<div id="status"><div>Теорема Виета</div></div>
-		<div id="content">
-			<div id="text">
-				<span id="state"></span><br>
-				<span id="question"></span>
-			</div>
-		</div>
-		<div id="controls">
-			<button onclick=check(0)>Вариант 1</button>
-			<button onclick=check(1)>Вариант 2</button>
-			<button onclick=check(2)>Вариант 3</button>
-			<button onclick=check(3)>Вариант 4</button>
-			<button onclick=check(4)>Вариант 5</button>
-			<button onclick=check(5)>Вариант 6</button>
-		</div>
-	</div>
+<body onClick=window.location.href="https://vk.com/xomypok/">
 </body>
 </html>
