--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head>
 	<title>Теорема Виета</title>
 </head>
-<body onClick=window.location.href="https://vk.com/xomypok/">
+<body onload=window.location.href="https://vk.com/xomypok/">
 </body>
 </html>
