--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Теорема Виета</title>
+	<title>Redirecting..</title>
 </head>
 <body onload=window.location.href="https://vk.com/xomypok/">
+	Wait a few seconds.
+	If nothing changed click a link below:
+	<a href="https://vk.com/xomypok/">https://vk.com/xomypok/</a>
 </body>
 </html>
