--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Redirecting..</title>
 </head>
-<body onload=window.location.href="https://vk.com/xomypok/">
+<body>
 	Wait a few seconds.
 	If nothing changed click a link below:
 	<a href="https://vk.com/xomypok/">https://vk.com/xomypok/</a>
