--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Redirecting..</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Пазл</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-	Wait a few seconds.
-	If nothing changed click a link below:
-	<a href="https://vk.com/xomypok/">https://vk.com/xomypok/</a>
+  <h1>Собери пазл</h1>
+  <div class="puzzle-board" id="puzzle-board"></div>
+  <div class="pieces" id="pieces"></div>
+  <button id="reset-button">Сбросить</button>
+  <script src="script.js"></script>
 </body>
 </html>
